resolve CountDownTimer memory leaks. fix design and style. remove some redundant code.

--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/equation_textview_fragmentcalculator"
         android:hint="Enter your equation"
+        android:textStyle="bold"
         android:textColorHint="@color/white"
         android:layout_gravity="center"
         android:textColor="@color/white"
