--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:id="@+id/recyclerview"
         android:paddingBottom="100dp"
         android:clipToPadding="false"
+        tools:listitem="@layout/item_equation"
         />
 
 
@@ -30,7 +31,7 @@
         android:id="@+id/addequation_fab"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        app:backgroundTint="@color/semiblack"
+        app:backgroundTint="@color/purple_500"
         app:srcCompat="@drawable/ic_baseline_add_24"
 
         app:fabCustomSize="50dp"
