--- a/app/src/main/res/layout/item_equation.xml
+++ b/app/src/main/res/layout/item_equation.xml
@@ -6,7 +6,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="16dp"
     android:orientation="vertical"
-    android:background="@color/black"
     >
 
 <FrameLayout
@@ -14,13 +13,13 @@
     android:layout_height="wrap_content"
     >
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="0dp">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_gravity="center"-->
+<!--        app:cardBackgroundColor="@android:color/transparent"-->
+<!--        app:cardCornerRadius="0dp"-->
+<!--        app:cardElevation="0dp">-->
 
         <com.ahmedmamdouh13.ama.mathquestionapp.custom.CustomProgressView
             android:layout_width="match_parent"
@@ -28,12 +27,11 @@
             android:id="@+id/customprogress"
             android:alpha="0.8"
             />
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
     <RelativeLayout
-
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="150dp">
 
 
         <TextView
@@ -46,18 +44,20 @@
             android:layout_toStartOf="@id/timer_textview"
             android:layout_alignParentStart="true"
             android:gravity="start|center"
-            android:textSize="20sp"
+            android:textSize="30sp"
+            android:textStyle="bold"
             android:text="@string/template_equation" />
 
         <TextView
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="3"
-            android:background="@drawable/round_corner_white"
+            android:background="@drawable/round_corner_pads"
+
             android:gravity="center"
             android:textStyle="bold"
             android:id="@+id/timer_textview"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
@@ -79,7 +79,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:textSize="20sp"
-        android:visibility="gone"
+        android:background="@color/semiblack"
 
         />
 </LinearLayout>
