--- a/app/src/main/res/layout/row_number_pad.xml
+++ b/app/src/main/res/layout/row_number_pad.xml
@@ -15,12 +15,18 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="7"
+            android:layout_margin="2dp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
             android:id="@+id/seven_button"
             />
 
         <Button
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
+            android:layout_margin="2dp"
             android:text="8"
             android:id="@+id/eight_button"
             />
@@ -28,6 +34,9 @@
         <Button
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_margin="2dp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
             android:text="9"
             android:id="@+id/nine_button"
             />
@@ -46,13 +55,19 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="4"
+            android:layout_margin="2dp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
             android:id="@+id/four_button"
             />
 
         <Button
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_margin="2dp"
             android:text="5"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
             android:id="@+id/five_button"
             />
 
@@ -60,6 +75,9 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:text="6"
+            android:textColor="@color/white"
+            android:layout_margin="2dp"
+            android:background="@drawable/round_corner_pads"
             android:id="@+id/six_button"
             />
 
@@ -74,6 +92,9 @@
         <Button
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:textColor="@color/white"
+            android:layout_margin="2dp"
+            android:background="@drawable/round_corner_pads"
             android:text="1"
             android:id="@+id/one_button"
             />
@@ -81,12 +102,18 @@
         <Button
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
+            android:layout_margin="2dp"
             android:text="2"
             android:id="@+id/two_button"
             />
 
         <Button
             android:layout_width="50dp"
+            android:textColor="@color/white"
+            android:background="@drawable/round_corner_pads"
+            android:layout_margin="2dp"
             android:layout_height="50dp"
             android:text="3"
             android:id="@+id/three_button"
@@ -100,6 +127,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:text="0"
+        android:textColor="@color/white"
+        android:layout_margin="2dp"
+        android:background="@drawable/round_corner_pads"
         android:layout_gravity="center"
         android:id="@+id/zero_button"
         />
