--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,11 @@
   <resources>
       <color name="purple_200">#FFBB86FC</color>
       <color name="purple_500">#272727</color>
-      <color name="purple_700">#101010</color>
+      <color name="purple_700">#4A148C</color>
       <color name="teal_200">#FF03DAC5</color>
       <color name="teal_700">#FF018786</color>
       <color name="black">#FF000000</color>
       <color name="white">#FFFFFFFF</color>
-      <color name="semiblack">#1B1B1B</color>
+      <color name="semiblack">#901B1B1B</color>
+      <color name="pad_color">#707C4DFF</color>
   </resources>
