--- a/app/src/main/res/drawable/round_corner_white.xml
+++ b/app/src/main/res/drawable/round_corner_white.xml
@@ -4,5 +4,5 @@
     <corners android:radius="25dp"
 
         />
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/semiblack"/>
 </shape>
